Add initial project files and structure

--- a/FATEC/Projeto Integrador (P.I)/LoginUBS/LoginUBS/src/main/resources/templates/cadastro.html
+++ b/FATEC/Projeto Integrador (P.I)/LoginUBS/LoginUBS/src/main/resources/templates/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8" />
@@ -171,6 +171,7 @@
             <input type="text" id="cpf" name="cpf" placeholder="Digite seu CPF" required />
             <span class="highlight"></span>
             <label for="cpf"></label>
+
         </div>
 
         <div class="input-group">
