--- a/FATEC/Projeto Integrador (P.I)/LoginUBS/LoginUBS/src/main/resources/templates/index.html
+++ b/FATEC/Projeto Integrador (P.I)/LoginUBS/LoginUBS/src/main/resources/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UBS - Acesso ao Sistema</title>
     <link rel="icon" href="./Images/UBS.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <style>
             @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
@@ -169,7 +171,7 @@
     </div>
 
         
-                <form method="post" action="" class="login-form" id="login-form">
+                <form method="post" action="/logar" class="login-form" id="login-form">
                     
                     <div class="error-messages">
                 
@@ -186,10 +188,11 @@
                         <span class="highlight"></span>
                         <label for="password">Senha</label>
                     </div>
-                        <a href="main.html" class="login-button">Acessar Sistema</a>
+                       <button type = "submit" class="login-button">Entrar no Sistema</button>
                     <div class="forgot-password">
-                        <a href="./enviarcodigo.html">Esqueceu a senha?</a>
+                        <a href="/enviarcodigo.html">Esqueceu a senha?</a>
                     </div>
+                    <div th:if="${erro != null}" th:text="${erro}" class="alert alert-danger" role="alert"></div>
                 </form>
     </div>    
     <!-- Fim do formulário de login -->
